--- a/src/components/OurPolicies.astro
+++ b/src/components/OurPolicies.astro
@@ -8,7 +8,7 @@
             <div class="text">
                 <h3>Our Policies</h3>
     
-                <p>As a prominent provider of daily office contract cleaning services, we are dedicated to continually enhancing our Quality Management system. Our commitment is to deliver exceptional office cleaning services, aiming to achieve maximum customer retention and attract new business.</p>
+                <p>As a prominent provider of daily office contract cleaning services, <b>we are dedicated to continually enhancing our Quality Management system.</b> Our commitment is to deliver exceptional office cleaning services, aiming to achieve maximum customer retention and attract new business.</p>
     
                 <h4>Our Objectives:</h4>
     
@@ -28,7 +28,8 @@
             <div class="environmental_policy">
                 <h4>Environmental Policy:</h4>
 
-                <p>At The Clean Network, we recognize the importance of respecting and caring for the environment. We strive to leave a positive legacy for future generations.</p>
+                <p>At The Clean Network, we recognize the <b>importance of respecting and caring for the environment</b>. We strive to leave a positive legacy for future generations.</p>
+                
                 <div class="bullets">
                     <div class="ctnr reveal squares_bg">
                         <p>Regularly review and assess suppliers to ensure the use of environmentally friendly products.</p>
