--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -16,8 +16,6 @@ const services = (await getCollection('services')).sort((a, b) => {
     }
 });
 
-const currentURL = new URL(Astro.request.url)
-
 import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
@@ -152,8 +150,8 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
                 "@type": "LocalBusiness",
                 "name": "The Clean Network",
                 "image": "/og/social-image.jpg",
-                "@id": currentURL,
-                "url": currentURL,
+                "@id": `${Astro.url}`,
+                "url": `${Astro.url}`,
                 "telephone": [
                     "+4402034110275"
                 ],
