--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -272,7 +272,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					"itemReviewed": {
 					"@type": "LocalBusiness",
 					"image": "/og/social-image.jpg",
-					"name": "The Clean Network",
+					"name": "Clean Network",
 					"telephone": "+4402034110275",
 					"address" :{
 						"@type": "PostalAddress",
@@ -284,11 +284,11 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					},
 					"author": {
 						"@type": "Organization",
-						"name": "The Clean Network"
+						"name": "Clean Network"
 					},
 					"publisher": {
 					"@type": "Organization",
-					"name": "The Clean Network"
+					"name": "Clean Network"
 					}
 				}}
 			/>
