--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -108,8 +108,7 @@ h5 {
 .content_ctnr {
     width: clamp(9rem, 91vw, 87rem);
     margin-inline: auto;
-    margin-bottom: clamp(4rem,18vw,6rem);
-    margin-top: calc(clamp(10rem, 62vw, 50rem) * -1);
+    margin-block: calc(clamp(10rem, 62vw, 50rem) * -1) clamp(4rem,20vw,12rem);
     background-color: rgb(248 248 255 / 85%);
     backdrop-filter: blur(0.5rem);
     border-radius: 1.2rem;
@@ -173,7 +172,7 @@ article h1 {
     line-height: 1.55;
 }
 
-.content_ctnr .post_content p strong, .content_ctnr .post_content p em {
+.content_ctnr .post_content p strong, .content_ctnr .post_content p em, .content_ctnr .post_content p b {
     font-weight: 500;
 }
 
@@ -181,7 +180,6 @@ article h1 {
     display: block;
     padding: 1.2rem;
     margin-top: 3rem;
-    margin-inline: clamp(2.5rem, 6vmin, 5rem);
 }
 
 .content_ctnr .cta_ctnr {
@@ -192,22 +190,22 @@ article h1 {
 
 .content_ctnr a.back {
     display: block;
-    padding: 1rem;
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
+    padding: 1.2rem 3rem;
     color: var(--primary-a);
     font-size: clamp(1.5rem,4vmin,1.8rem);
     font-weight: 500;
     text-align: center;
-    width: fit-content;
     margin-inline: auto;
+    background-color: var(--light-d);
+    border-radius: 0 0 1.2rem 1.2rem;
+    box-sizing: border-box;
 }
 
 .content_ctnr > hr {
     width: 100%;
     height: 1.2rem;
     background-color: var(--light-d);
-    margin-block: 6rem;
+    margin-block: clamp(8rem, 20vw, 10rem);
 }
 
 /* article a.back::before, .intro a.back::before {
@@ -238,7 +236,7 @@ article a.back:hover {
 
 .recommendations {
     padding-inline: clamp(2.5rem, 6vmin, 5rem);
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
 }
 
 .recommendations ul {
@@ -268,7 +266,7 @@ article a.back:hover {
 }
 
 .recommendations ul li .content {
-    padding: clamp(1rem, 5vw, 2.6rem) 0 clamp(1rem, 4vw, 1.6rem) clamp(1rem, 4vw, 3.3rem);
+    padding: clamp(1rem, 5vw, 2.6rem) 0 clamp(1rem, 4vw, 2.6rem) clamp(1rem, 4vw, 3.3rem);
     flex: 1;
     min-width: 15rem;
 }
