--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -89,6 +89,6 @@ import { SITE_DESCRIPTION, SITE_KEYWORDS, ABOUT_TITLE, ABOUT_DESCRIPTION, ABOUT_
             <OurPolicies/>
         </section>
 
-        <ContactSection />
+        <ContactSection contactPage="false" />
     </main>
 </BaseLayout>
