--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -210,7 +210,7 @@ const posts = (await getCollection('blog')).sort(
 
     <!-- <EndingBlogNav category={post.data.category}/> -->
 
-    <ContactSection />
+    <ContactSection contactPage="false" />
 
     <Schema
         item={{
