--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -10,6 +10,6 @@ import { SITE_DESCRIPTION, SITE_KEYWORDS, CONTACT_TITLE, CONTACT_DESCRIPTION, CO
 
 <BaseLayout title={CONTACT_TITLE} description={CONTACT_DESCRIPTION ? CONTACT_DESCRIPTION : SITE_DESCRIPTION} keywords={CONTACT_KEYWORDS ? CONTACT_KEYWORDS : SITE_KEYWORDS}>
     <main>
-        <ContactSection />
+        <ContactSection contactPage="true" />
     </main>
 </BaseLayout>
