--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -304,7 +304,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 			</div>
 		</section>
 
-		<ContactSection />
+		<ContactSection contactPage="false"/>
 
 		<BlogStripe/>
 	</main>
