--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -37,7 +37,7 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
         </div>
 
         <div class="contact_ctnr">
-            <ContactSection />
+            <ContactSection contactPage="false" />
         </div>
     </main>
 </BaseLayout>
