--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -134,7 +134,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
             </div>
         </main>
 
-        <ContactSection />
+        <ContactSection contactPage="false" />
 
 		<BlogStripe/>
 
