--- a/src/pages/FAQ/index.astro
+++ b/src/pages/FAQ/index.astro
@@ -22,6 +22,6 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS} from "../../consts";
             <FAQ expanded="true" max="-1"/>
         </div>
 
-        <ContactSection/>
+        <ContactSection contactPage="false"/>
     </main>
 </BaseLayout>
