--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -109,11 +109,11 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[firstRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more">Read more</a>
+                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>Read more</a>
                             </div>
                         </div>
 
-                        <a class="hero" href={`/services/${filteredServices[firstRandomPos].slug}/`}>
+                        <a class="hero" href={`/services/${filteredServices[firstRandomPos].slug}/`} aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>
                             <img src={filteredServices[firstRandomPos].data.image} alt={filteredServices[firstRandomPos].data.description} loading="lazy" draggable="false"/>
                         </a>
                     </div>
@@ -131,11 +131,11 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[secondRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more">Read more</a>
+                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>Read more</a>
                             </div>
                         </div>
 
-                        <a class="hero" href={`/services/${filteredServices[secondRandomPos].slug}/`}>
+                        <a class="hero" href={`/services/${filteredServices[secondRandomPos].slug}/`} aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>
                             <img src={filteredServices[secondRandomPos].data.image} alt={filteredServices[secondRandomPos].data.description} loading="lazy" draggable="false"/>
                         </a>
                     </div>
@@ -153,11 +153,11 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[thirdRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more">Read more</a>
+                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>Read more</a>
                             </div>
                         </div>
 
-                        <a class="hero" href={`/services/${filteredServices[thirdRandomPos].slug}/`}>
+                        <a class="hero" href={`/services/${filteredServices[thirdRandomPos].slug}/`} aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>
                             <img src={filteredServices[thirdRandomPos].data.image} alt={filteredServices[thirdRandomPos].data.description} loading="lazy" draggable="false"/>
                         </a>
                     </div>
@@ -165,10 +165,10 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
             </ul>
         </aside>
     
-        <a href="/services/" class="back">All Services</a>
+        <a href="/services/" class="back" aria-label="Check All Services">All Services</a>
     </div>
 
-    <ContactSection />
+    <ContactSection contactPage="false" />
 
     <BlogStripe/>
 
@@ -176,20 +176,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
         item={{
             "@context": "https://schema.org",
             "@type": "Service",
-            "headline": `${service.data.title} ${String(service.data.title).includes('Cleaning') ? " Service" : "Cleaning Service"}`,
             "image": `${service.data.image}`,
-            "author": [{
-                "@type": "Organization",
-                "name": "The Clean Network"
-            }],
-            "publisher": {
-                "@type": "Organization",
-                "name": "The Clean Network",
-                "logo": {
-                    "@type": "ImageObject",
-                    "url": "/logo/tcn-logo-360.png"
-                }
-            },
             "areaServed": {
                 "@type": "City",
                 "name": "London",
