--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -103,7 +103,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[firstRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[firstRandomPos].data.title}`>Read more</a>
+                                <a href={`/sectors/${filteredSector[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[firstRandomPos].data.title}`>About the Sector</a>
                             </div>
                         </div>
 
@@ -125,7 +125,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[secondRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[secondRandomPos].data.title}`>Read more</a>
+                                <a href={`/sectors/${filteredSector[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[secondRandomPos].data.title}`>About the Sector</a>
                             </div>
                         </div>
 
@@ -147,7 +147,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                                     <p class="description">{filteredSector[thirdRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/sectors/${filteredSector[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[thirdRandomPos].data.title}`>Read more</a>
+                                <a href={`/sectors/${filteredSector[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredSector[thirdRandomPos].data.title}`>About the Sector</a>
                             </div>
                         </div>
 
