--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -109,7 +109,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[firstRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>Read more</a>
+                                <a href={`/services/${filteredServices[firstRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[firstRandomPos].data.title}`>About the Service</a>
                             </div>
                         </div>
 
@@ -131,7 +131,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[secondRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>Read more</a>
+                                <a href={`/services/${filteredServices[secondRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[secondRandomPos].data.title}`>About the Service</a>
                             </div>
                         </div>
 
@@ -153,7 +153,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                                     <p class="description">{filteredServices[thirdRandomPos].data.description}</p>
                                 ) : null}
 
-                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>Read more</a>
+                                <a href={`/services/${filteredServices[thirdRandomPos].slug}/`} class="read_more" aria-label=`Read more about ${filteredServices[thirdRandomPos].data.title}`>About the Service</a>
                             </div>
                         </div>
 
